# Differential-Bouyancy-Model

buoyancy-model/: README.md  pyproject.toml
buoyancy-model/src/buoyancy_model/: __init__.py  __main__.py  sim.py
buoyancy-model/tests/: test_sim.py
differential-buoyancy-model/: README.md  pyproject.toml  requirements.txt
differential-buoyancy-model-github-ready/: pyproject.toml
differential-buoyancy-model-github-ready/src/diff_buoyancy/: __init__.py  model.py  viz.py
differential-buoyancy-model/src/diff_buoyancy/: cli.py
differential-buoyancy-model/src/differential_buoyancy_model/: __init__.py  __main__.py  model.py
differential-buoyancy-model/tests/: test_simulate.py
