[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buoyancy-model"
version = "0.1.0"
description = "1D buoyancy + drag ODE simulation with Plotly animation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib", "plotly"]

[project.scripts]
buoyancy-model = "buoyancy_model.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
