[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-buoyancy"
version = "0.1.0"
description = "Toy differential buoyancy vertical motion simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib", "plotly"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
diff-buoyancy = "diff_buoyancy.cli:main"
